updating uploader component to fix file list overflow issues; tweaking demo page css to make it all look nicer

--- a/demo/src/style.css
+++ b/demo/src/style.css
@@ -1,6 +1,16 @@
+* {
+  outline: 1px solid #f00 !important;
+}
 body {
   margin: 0;
   padding: 0;
+  width: 100%;
+}
+#demo {
+  width: 100%;
+}
+html {
+  width: 100%;
 }
 
 body.bp3-dark {
@@ -60,7 +70,7 @@ h6 {
 }
 
 .demo-header {
-  width: 100vw;
+  width: 100%;
   text-align: center;
   padding: 12px 0;
   background: #003f66;
